trunk/Archive2/a2/ecbb8eafd907e0/output
main.cpp: In function 'int main()':
main.cpp:10:7: error: request for member 'a' in 'a', which is of non-class type 'Type()'
     a.a = 1;
       ^
